2008-04-20 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/flresource.c: Removed setting of the machines
	locale setting as default for the program. This
	change had already been discussed by Jean-Marc and
	Angus back in 2004 but never actually done.

	* lib/fselect.c: Programs doesn't crash anymore when
	fl_set_directory() gets passed a NULL pointer.

	* lib/buttons.c: Bug repaired that kept buttons from
	becoming highlighted when the mouse was moved nto them
	(and vice versa).

	* lib/formbrowser.c: Changed the handling of the scroll-
	bars to hopefully make it work correctly even when the
	form gets resized.

2008-04-13 Jens Thoms Toerring    <jtt@toerring.de>

	* fdesign/fd/*.c, fdesign/spec/*.c: Replaced
	'#include "forms.h"' with '#include "include/forms.h"
	to avoid compilation problems Peter Galbraith pointed
	out.

	* fdesign/fd_printC.c: In created C files we now have
	'#include <forms.h>' instead of '#include "forms.h"'.

2008-04-10 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/buttons.c: Removed code that enforced on of a
	set of radio buttons to be set - thus led to problems
	for some older applications.

	Also emoved restriction that buttons only react to
	a click with the left mouse button per default.
	Instead added two new public functions
	  fl_set_button_mouse_buttons()
	  fl_get_button_mouse_buttons()
	that allow to set and query the mouse buttons a
	button will react to. dfault is to react to all
	mouse buttons.

	* fdesign/sp_buttons.c, fdesign/fd_spec.c: Added
	support for setting the mouse buttons a button
	reacts to via fdesign (click the "Spec" tab rider
	in the attributes window).

	* fdesign/fd_main.c: Added option '-xforms-version'
	to print out the version of the library being used.

	* lib/tabfolder.c: All memory now gets released on
	call of fl_finish().

	* lib/symbols.c: Unlimited number of symbols can be
	created without restrictions on the name length.
	Memory allocated for symbols gets deallocated in
	fl_finish().
